Set width to auto, hopefully fixes the scrollbar issue.

--- a/pure-css-select-style.css
+++ b/pure-css-select-style.css
@@ -4,7 +4,7 @@
 */
 
 .pure-css-select-style {
-  width: 99.8%;
+  width: auto;
   overflow: hidden;
 }
 .pure-css-select-style select {
